--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,57 +1,36 @@
-name: CI - Fraud Detection SQL Server
+name: Fraud Detection Workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
+  workflow_dispatch:  # lets you run manually
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      sqlserver:
-        image: mcr.microsoft.com/mssql/server:2019-latest
-        env:
-          SA_PASSWORD: "Your_password123"
-          ACCEPT_EULA: "Y"
-        ports:
-          - 1433:1433
-        options: >-
-          --health-cmd "exit 0" 
-          --health-interval 10s 
-          --health-timeout 5s 
-          --health-retries 10
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Install SQLCMD
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y mssql-tools unixodbc-dev
-        echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
-        source ~/.bashrc
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-    - name: Wait for SQL Server to be available
-      run: |
-        for i in {1..30}; do
-          /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "Your_password123" -Q "SELECT 1" && break
-          echo "SQL Server not ready yet..."
-          sleep 5
-        done
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run schema and seed scripts
-      run: |
-        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "Your_password123" -d master -i schema.sql
-        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "Your_password123" -d master -i seed.sql
+      - name: Run tests
+        run: |
+          pytest --maxfail=1 --disable-warnings -q
 
-    - name: Run test queries
-      run: |
-        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "Your_password123" -d master -i tests.sql -o test_results.txt
-
-    - name: Upload test results artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: sql-test-results
-        path: test_results.txt
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: ./tests/   # change if your test results are saved somewhere else
